--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,8 @@ footer{
     margin-bottom: 10px;
 }
 
+
+
 /*****************************************
 .progress-circle{
     margin-top: 10px;
@@ -656,6 +658,11 @@ textarea{
 
 .edit-post{
     margin-bottom: 10px;;
+}
+
+.progress-circle{
+    margin-left: 5px !important;
+    margin-right: 5px !important;
 }
 /*********************************************/
 /*********************************************/
