--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,10 +93,6 @@ footer{
     letter-spacing: 2px;
 }
 
-/* .points-container{
-    height: 120px;
-} */
-
 .card-body{
     padding: 10px;
 }
@@ -105,6 +101,9 @@ footer{
     margin-bottom: 10px;
 }
 
+.paginatior .btn{
+    font-size: 2rem;
+}
 
 
 /*****************************************
@@ -375,6 +374,12 @@ footer{
 
 .author-container .fa-facebook-f{
     margin-left: auto; 
+}
+
+.edit-post,
+.delete-post{
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /*****************************************/
@@ -655,10 +660,6 @@ textarea{
    width: 100%; 
 }
 
-
-.edit-post{
-    margin-bottom: 10px;;
-}
 
 .progress-circle{
     margin-left: 5px !important;
