--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -5,13 +5,13 @@
 <div class="container-fluid review-container">
     <div class="game-header">
         {% if 'username' in session %}
-            <div class="edit-post p-3 mb-2  d-flex justify-content-around bg-info">
-                <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit-post btn btn-warning text-white">
-                    Edit Post
-                </a>
-                <a href="{{ url_for('delete_post', post_id=post._id) }}" class="delele-btn btn btn-danger text-white">
-                    Delete Post
-                </a>
+            <div class=" p-3 mb-2 row bg-info">
+                <div class="col-6 edit-post d-flex">
+                    <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit-post btn btn-warning text-white">Edit Post</a>
+                </div>
+                <div class="col-6 delete-post d-flex">
+                    <a href="{{ url_for('delete_post', post_id=post._id) }}" class="delele-post btn btn-danger text-white">Delete Post</a>
+                </div>
             </div>
             
         {% endif %}
