--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark ">
         <div class="container">
-            <a class="navbar-brand " href="{{ url_for('index')}}"><i class="fas fa-wine-bottle"></i>Bottleneck</a>
+            <a class="navbar-brand " href="{{ url_for('index')}}?page=1"><i class="fas fa-wine-bottle"></i>Bottleneck</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
