--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -15,7 +15,7 @@
                             <i class="fas fa-gamepad"></i>&nbsp;Title
                         </label>
                     </div>
-                    <input type="text" class="form-control" name="post-title" id="post-title" value="{{ post.post_title }}">
+                    <input type="text" class="form-control" name="post-title" id="post-title" value="{{ post.post_title }}" required>
                 </div>
 
                 <div class="col-sm-12 input-group mb-3">
@@ -34,7 +34,7 @@
                         </label>
                     </div>
                     <div class="custom-file">
-                        <input type="date" class="form-control" name="release-date" value="{{ post.release_date.strftime('%Y-%m-%d') }}">
+                        <input type="date" class="form-control" name="release-date" value="{{ post.release_date.strftime('%Y-%m-%d') }}" required>
                     </div>
                 </div>
 
@@ -54,7 +54,7 @@
                         </label>
                     </div>
                     <div class="custom-file">
-                        <input type="file" name="post-cover" id="post-cover">
+                        <input type="file" name="post-cover" id="post-cover" required>
                         <label class="custom-file-label" style="overflow: hidden;" for="post-cover">
                             {{ post.post_cover }}
                         </label>
@@ -65,7 +65,7 @@
                     <label for="no_players" class="input-group-text"style="margin: 0;">
                         <i class="fas fa-gamepad"></i>&nbsp;Playes
                     </label>
-                    <input type="number" class="form-control" name="no_players" id="no-players" min="1" max="16" value="{{ post.no_players }}">
+                    <input type="number" class="form-control" name="no_players" id="no-players" min="1" max="16" value="{{ post.no_players }}" required>
                 </div>
                 
                 <div class="input-group mb-3 col-md-6 col-lg-6">
@@ -74,7 +74,7 @@
                             <i class="fas fa-star-half-alt"></i>&nbsp;Score
                         </label>
                     </div>
-                    <input type="number" class="form-control" name="game_score" id="game-score" min="0" max="100" value="{{ post.game_score }}">
+                    <input type="number" class="form-control" name="game_score" id="game-score" min="0" max="100" value="{{ post.game_score }}" required>
                 </div>
             </div>
             
@@ -115,9 +115,9 @@
                     <div class="description-container">
                         {% for pegi in pegi_rate %}
                             {% if pegi in post.pegi_rate %}
-                                <input type="radio" class="form-check-input" name="pegi-rate" value="{{pegi}}" id="{{pegi}}" checked>
+                                <input type="radio" class="form-check-input" name="pegi_rate" value="{{pegi}}" id="{{pegi}}" checked>
                             {% else %}
-                                <input type="radio" class="form-check-input" name="pegi-rate" value="{{pegi_r}}" id="{{pegi}}">
+                                <input type="radio" class="form-check-input" name="pegi_rate" value="{{pegi_r}}" id="{{pegi}}">
                             {% endif %}
                             <label class="" for="{{pegi}}">{{pegi}}</label>
                             <br>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="custom-file">
                         <label class="custom-file-label" style="overflow: hidden;" for="gallery-1">{{ post.gallery_1 }}</label>
-                        <input type="file" name="gallery_1" id="gallery-1" value="{{ post.gallery_1 }}">
+                        <input type="file" name="gallery_1" id="gallery-1" value="{{ post.gallery_1 }}" required>
                     </div>
                 </div>
         
@@ -150,7 +150,7 @@
                     </div>
                     <div class="custom-file">
                         <label class="custom-file-label" style="overflow: hidden;" for="gallery-2">{{ post.gallery_2 }}</label>
-                        <input type="file" name="gallery_2" id="gallery-2" value="{{ post.gallery_2 }}">
+                        <input type="file" name="gallery_2" id="gallery-2" value="{{ post.gallery_2 }}" required>
                     </div>
                 </div>
         
@@ -160,7 +160,7 @@
                     </div>
                     <div class="custom-file">
                         <label class="custom-file-label" style="overflow: hidden;" for="gallery-3">{{ post.gallery_3 }}</label>
-                        <input type="file" name="gallery_3" id="gallery-3" value="{{ post.gallery_3 }}">
+                        <input type="file" name="gallery_3" id="gallery-3" value="{{ post.gallery_3 }}" required>
                     </div>
                 </div>
         
@@ -170,7 +170,7 @@
                     </div>
                     <div class="custom-file">
                         <label class="custom-file-label" style="overflow: hidden;" for="gallery-4">{{ post.gallery_4 }}</label>
-                        <input type="file" name="gallery_4" id="gallery-4" value="{{ post.gallery_4 }}">
+                        <input type="file" name="gallery_4" id="gallery-4" value="{{ post.gallery_4 }}" required>
                     </div>
                 </div>
         
@@ -180,7 +180,7 @@
                     </div>
                     <div class="custom-file">
                         <label class="custom-file-label" fstyle="overflow: hidden;" or="gallery-1">{{ post.gallery_5 }}</label>
-                        <input type="file" name="gallery_5" id="gallery-5" value="{{ post.gallery_5 }}">
+                        <input type="file" name="gallery_5" id="gallery-5" value="{{ post.gallery_5 }}" required>
                     </div>
                 </div>
             </div>
@@ -199,19 +199,19 @@
                     <label for="pros" class="post-pros input-group-text">
                         <i class="fas fa-thumbs-up"></i>&nbsp;Pros
                     </label>
-                    <textarea name="post-pros" id="pros" class="pros form-control">{{ post.pros_content }}</textarea>
+                    <textarea name="post-pros" id="pros" class="pros form-control" required>{{ post.pros_content }}</textarea>
                 </div>
                 <div class="col-lg-6 mb-3">
                     <label for="cons" class="post-cons input-group-text">
                         <i class="fas fa-thumbs-down"></i>&nbsp;Cons
                     </label>
-                    <textarea name="post-cons" id="cons" class="cons form-control">{{ post.cons_content }}</textarea>
+                    <textarea name="post-cons" id="cons" class="cons form-control" required>{{ post.cons_content }}</textarea>
                 </div> 
                 <div class="col-12 mb-3">
                     <label for="post-review" class="post-review input-group-text">
                         <i class="far fa-file-alt"></i>&nbsp;Review
                     </label>
-                    <textarea name="post-review" id="post-review" class="post-review form-control">{{ post.post_review }}</textarea>
+                    <textarea name="post-review" id="post-review" class="post-review form-control" required>{{ post.post_review }}</textarea>
                 </div>
             </div>
 
