--- a/templates/post.html
+++ b/templates/post.html
@@ -51,8 +51,8 @@
                         </label>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="post-cover"  id="post-cover" aria-describedby="inputGroupFileAddon01" required>
-                        <label class="custom-file-label" for="post-cover">Cover Image</label>
+                        <input type="file" class="custom-file-input" name="post_cover"  id="post-cover" aria-describedby="inputGroupFileAddon01" required>
+                        <label class="custom-file-label" for="post_over">Cover Image</label>
                     </div>
                 </div>
             </div>
