Forgot to save chanes for release_date on the edit html

--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -55,7 +55,7 @@
                         </label>
                     </div>
                     <div class="custom-file">
-                        <input type="date" class="form-control" name="release-date" value="{{ post.release_date.strftime('%Y-%m-%d') }}">
+                        <input type="date" class="form-control" name="release_date" value="{{ post.release_date.strftime('%Y-%m-%d') }}">
                     </div>
                 </div>
 
