--- a/templates/post.html
+++ b/templates/post.html
@@ -179,10 +179,10 @@
             <div class="row">
                 <div class="col-12 form-group">
                     <legend>
-                        <i class="fas fa-file-word"></i>Review Section
+                        <i class="fas fa-file-word"></i>&nbsp;Review Section
                     </legend>
                     <p>
-                        <i class="fas fa-file-code"></i>Html friendly: Give a go to your Html skills to add your owen spice to your post.
+                        <i class="fas fa-file-code"></i>&nbsp;Html friendly: Give a go to your Html skills to add your owen spice to your post.
                     </p>
                 </div>
                 <div class="col-lg-6 mb-3">
