--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,11 +30,6 @@ header{
     z-index: 1;
 }
 
-footer{
-    min-height: 200px;
-}
-
-
 
 .navbar{
     background-color: rgb(57,57,57);
@@ -53,6 +48,19 @@ footer{
 
 .nav-item a{
     font-size: 1.8rem;
+}
+
+main{
+    min-height: 500px;
+}
+
+footer{
+    background-color: rgb(89, 89, 89);
+    min-height: 200px;
+    margin-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
 }
 
 /*****************************************/
@@ -105,20 +113,6 @@ footer{
     font-size: 2rem;
 }
 
-
-/*****************************************
-.progress-circle{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.progress-circle{
-    padding: auto 0;
-    margin: 0;
-}
-*****************************************/
 
 
 /*****************************************/
@@ -476,6 +470,22 @@ textarea{
 /*****************************************/
 .singup,
 .login{
+    text-align: center;
+}
+
+
+/*****************************************
+****** User****
+*****************************************/
+.user-container{
+    margin-top: 100px;
+}
+
+.user{
+    margin-bottom: 50px;
+}
+
+.theader{
     text-align: center;
 }
 
