--- a/templates/user.html
+++ b/templates/user.html
@@ -2,37 +2,37 @@
 {% block title %}{{ username }}{% endblock %}
 {% block content %}
 
-
-<div class="col-12 text-white">
-    <h1>Hi {{username}}!</h1>
-    {# <h2>You are user number #{{user._id}}</h2> #}
-
-    <div class="col-12">
-        <div class="col-12 email">
-            
-            
-        </div>
+<div class="container">
+    <div class="row user-container">
+        <div class="col-12 text-white">
+            <div class="user">
+                <h1>Hi {{username}}!</h1>
+            </div>
+            <div class="col-12">
+                
+                
+            </div>
+            <table class="table table-striped table-light">
+                <thead> 
+                    <tr>
+                        <th class="theader" scope="col">Title</th>
+                        <th class="theader" scope="col">Sub-title</th>
+                        <th  class="theader"scope="col">Date posted</th>
+                    </tr>
+                </thead>
         
+                {% for post in posts %}
+                    {% if username in post.posted_by %}
+                    <tr>
+                        <td>{{post.post_title}}</td>
+                        <td>{{post.post_subtitle}}</td>
+                        <td>{{post.date_posted.strftime('%d/%b/%Y')}}</td>
+                    </tr>
+                    {% endif %}
+                {% endfor %}
+            </table>
+        </div>
     </div>
-    <table class="table table-striped table-light">
-        <thead> 
-            <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Sub-title</th>
-                <th scope="col">Date posted</th>
-            </tr>
-        </thead>
-
-        {% for post in posts %}
-            {% if username in post.posted_by %}
-            <tr>
-                <td>{{post.post_title}}</td>
-                <td>{{post.post_subtitle}}</td>
-                <td>{{post.date_posted.strftime('%d/%b/%Y')}}</td>
-            </tr>
-            {% endif %}
-        {% endfor %}
-    </table>
 </div>
 
 {% endblock %}
